correcao de ortografia

--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -6,17 +6,17 @@
 <head>
   <meta charset="utf-8">
   <script src="//unpkg.com/sunburst-chart"></script>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="https://rawgit.com/dmesquita/reusable_bubble_chart/master/bubble_chart.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.2/dist/leaflet.css"
+  <script src="//d3js.org/d3.v4.min.js"></script>
+  <script src="//rawgit.com/dmesquita/reusable_bubble_chart/master/bubble_chart.js"></script>
+  <link rel="stylesheet" href="//unpkg.com/leaflet@1.3.2/dist/leaflet.css"
     integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin=""/>
-  <script src="https://unpkg.com/leaflet@1.3.2/dist/leaflet.js"
+  <script src="//unpkg.com/leaflet@1.3.2/dist/leaflet.js"
     integrity="sha512-2fA79E27MOeBgLjmBrtAgM/20clVSV8vJERaW/EcnnWCVGwQRazzKtQS1kIusCZv1PtaQxosDZZ0F1Oastl55w=="
     crossorigin=""></script>
-  <script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.3.0/leaflet.markercluster.js'></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.3.0/MarkerCluster.Default.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.3.0/MarkerCluster.css" />
+  <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.3.0/leaflet.markercluster.js'></script>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.3.0/MarkerCluster.Default.css" />
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.3.0/MarkerCluster.css" />
 
   
   <style>
@@ -94,7 +94,7 @@
       <h1>Extratos por Fração e Espécie de Planta - Finais</h1>
       <div id="extrato_por_fracao_por_planta_final"></div>
       <br><br>
-      <h1>Localizacao de Plantas</h1>
+      <h1>Localização de Plantas</h1>
       <div id="mapid"></div>
     </div>
 
